Fixed gap and padding issue with main column

--- a/webgui/components/card-display.css
+++ b/webgui/components/card-display.css
@@ -1,9 +1,8 @@
 .card-display {
-    display: inline-block;
+    display: block;
     max-height: 100%;
     min-height: 100%;
     height: 100%;
-    padding-right: 2%;
 }
 
 .card-display-contents {
