--- a/webgui/components/tier-deck-slot.css
+++ b/webgui/components/tier-deck-slot.css
@@ -1,9 +1,8 @@
 .tier-deck-slot {
-    display: inline-block;
+    display: block;
     max-height: 100%;
     min-height: 100%;
     height: 100%;
-    padding-right: 2%;
     list-style: none;
 }
 
